--- a/OnlineMarket/templates/app1/item_index.html
+++ b/OnlineMarket/templates/app1/item_index.html
@@ -8,6 +8,7 @@
                 <th>Name</th>
                 <th>Price</th>
                 <th>Type</th>
+                <th>Image</th>
             </tr>
         </thead>
         <tbody>
@@ -17,6 +18,7 @@
                     <td>{{ item.name }}</td>
                     <td>{{ item.price }}</td>
                     <td>{{ item.type }}</td>
+                    <td>{{ item.image }}</td>
                 </tr>
             {% endfor %}
         </tbody>
