pot adauga imagini

--- a/OnlineMarket/templates/base.html
+++ b/OnlineMarket/templates/base.html
@@ -20,5 +20,8 @@
         </div>
     {% block content %}
     {% endblock %}
+    <footer class="col btn btn-dark">
+
+    </footer>
     </body>
 </html>
