--- a/OnlineMarket/templates/app1/item_index.html
+++ b/OnlineMarket/templates/app1/item_index.html
@@ -18,7 +18,7 @@
                     <td>{{ item.name }}</td>
                     <td>{{ item.price }}</td>
                     <td>{{ item.type }}</td>
-                    <td>{{ item.image }}</td>
+                    <td><img src="/media/media/item.image" alt="{{item.name}}"></td>
                 </tr>
             {% endfor %}
         </tbody>
