--- a/OnlineMarket/templates/base.html
+++ b/OnlineMarket/templates/base.html
@@ -14,6 +14,9 @@
                     <nav>
                         <a class="btn" href="/admin/">Admin</a>
                         <a class="btn" href="{% url 'app1:list_items' %} ">Items</a>
+                        {% if request.user.is_authenticated %}
+                            <a class="btn" href="{% url 'logout' %}">Logout</a>
+                        {% endif %}
                     </nav>
                 </div>
             </div>
