--- a/OnlineMarket/templates/app1/item_detail.html
+++ b/OnlineMarket/templates/app1/item_detail.html
@@ -1,7 +1,4 @@
 {% extends 'base.html' %}
-
-{% block title %}{{ item.name }}{{% endblock %}
-
 {% block content %}
     <a class="m-1 btn btn-primary" href="{% url 'app1:add_item' %}">Add item</a>
     <table class="table">
@@ -46,7 +43,7 @@
                                 <a class="btn btn-warning" href="{% url 'app1:deactivate_item' item.id %}">Deactivate</a>
                             {% endif %}
                         {% else %}
-                            <a class="btn btn-info" href="{% url 'app1:detail_item' item.id %}">Info</a>
+                            <a class="btn btn-info" href="#">Info</a>
                         {% endif %}
                     </td>
 
