--- a/OnlineMarket/templates/base.html
+++ b/OnlineMarket/templates/base.html
@@ -16,6 +16,8 @@
                         <a class="btn" href="{% url 'app1:list_items' %} ">Items</a>
                         {% if request.user.is_authenticated %}
                             <a class="btn" href="{% url 'logout' %}">Logout</a>
+                        {% else %}
+                            <a class="btn" href="{% url 'login' %}">Login</a>
                         {% endif %}
                     </nav>
                 </div>
