am erori pe care nu stiu sa le rezolv

--- a/OnlineMarket/templates/app1/item_detail.html
+++ b/OnlineMarket/templates/app1/item_detail.html
@@ -41,7 +41,7 @@
                                 <a class="btn btn-warning" href="{% url 'app1:deactivate_item' item.id %}">Deactivate</a>
                             {% endif %}
                         {% else %}
-                            <a class="btn btn-info" href="#">Info</a>
+                            <a class="btn btn-success" href="{% url 'login' %}">Login</a>
                         {% endif %}
                     </td>
 
