--- a/OnlineMarket/templates/base.html
+++ b/OnlineMarket/templates/base.html
@@ -15,10 +15,12 @@
                         <a class="btn" href="/admin/">Admin</a>
                         <a class="btn" href="{% url 'app1:list_items' %} ">Items</a>
                         {% if request.user.is_authenticated %}
-                            <a class="btn" href="{% url 'logout' %}">Logout</a>
+                            <a class="btn btn-danger" href="{% url 'logout' %}">Logout</a>
+                            <a class="btn btn-primary" href="{% url 'userprofile:user_account' %}">Account</a>
                         {% else %}
-                            <a class="btn" href="{% url 'login' %}">Login</a>
+                            <a class="btn btn-success" href="{% url 'login' %}">Login</a>
                         {% endif %}
+                        <a class="btn btn-info" href="{% url 'userprofile:create_user' %}">Sign up</a>
                     </nav>
                 </div>
             </div>
