am adaugat imbunatatiri

--- a/OnlineMarket/templates/app1/item_detail.html
+++ b/OnlineMarket/templates/app1/item_detail.html
@@ -34,6 +34,7 @@
                     <td>{{ item.id_user }}</td>
                     <td>
                         {% if item.id_user.id == request.user.id %}
+                            <a class="btn btn-primary" href="{% url 'app1:edit_item' item.id %}">Edit</a>
                             <a class="btn btn-danger" href="{% url 'app1:delete_item' item.id %}">Delete</a>
                             {% if item.active is False %}
                                 <a class="btn btn-info" href="{% url 'app1:activate_item' item.id %}">Activate</a>
@@ -41,7 +42,11 @@
                                 <a class="btn btn-warning" href="{% url 'app1:deactivate_item' item.id %}">Deactivate</a>
                             {% endif %}
                         {% elif request.user.is_authenticated %}
-                            <a class="btn btn-success" href="#">Buy</a>
+                            {% if item.active is True %}
+                                <a class="btn btn-success" href="#">Buy</a>
+                            {% else %}
+                                <a class="btn btn-dark text-white" href="#">Buy</a>
+                            {% endif %}
                             <a class="btn btn-info" href="#">Contact</a>
                         {% else %}
                             <a class="btn btn-success" href="{% url 'login' %}">Login</a>
