--- a/OnlineMarket/templates/app1/item_detail.html
+++ b/OnlineMarket/templates/app1/item_detail.html
@@ -6,6 +6,7 @@
                 <th>Index</th>
                 <th>Name</th>
                 <th>Price</th>
+                <th>Currency</th>
                 <th>Type</th>
                 <th>Image</th>
                 <th>Available</th>
@@ -18,6 +19,7 @@
                     <td>{{ forloop.counter }}</td>
                     <td>{{ item.name }}</td>
                     <td>{{ item.price }}</td>
+                    <td>{{ item.currency }}</td>
                     <td>{{ item.type }}</td>
                     <td>
                         {% if item.image %}
