--- a/OnlineMarket/templates/app1/item_index.html
+++ b/OnlineMarket/templates/app1/item_index.html
@@ -28,7 +28,7 @@
                     <td>{{ item.type }}</td>
                     <td>
                         {% if item.image %}
-                            <img src="{{ item.image.url }}" width="300" height="200">
+                            <img src="{{ item.image.url }}" width="300" height="200" class="img-thumbnail" alt="Cinque Terre">
                         {% endif %}
                     </td>
                     <td>
