arata putin mai bine proiectul

--- a/OnlineMarket/templates/app1/item_detail.html
+++ b/OnlineMarket/templates/app1/item_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    <table class="table">
+    <table class="my-5 table">
         <thead>
             <tr>
                 <th>Index</th>
