--- a/OnlineMarket/templates/app1/item_index.html
+++ b/OnlineMarket/templates/app1/item_index.html
@@ -3,6 +3,18 @@
 {% block title %}{{ item.name }}{{% endblock %}
 
 {% block content %}
+    <div class="m-1 col-4">
+<!--        <form>-->
+            <form method="get" action="{% url 'app1:list_items' %}">
+                <div class="form-group">
+
+                    <input class="m-1 form-control text-white bg-dark" name="query" value="{{ query }}"
+                           type="text" placeholder="Find a toy, a video game, etc...">
+                    <button class="m-1 btn btn-info">Search</button>
+                </div>
+            </form>
+<!--        </form>-->
+    </div>
     <a class="m-1 btn btn-primary" href="{% url 'app1:add_item' %}">Add item</a>
     <table class="table">
         <thead>
