--- a/OnlineMarket/templates/base.html
+++ b/OnlineMarket/templates/base.html
@@ -2,13 +2,13 @@
     <head>
         {% load static %}
         <title>Proiect Django</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<!--        <link rel="stylesheet" href="{% static 'css/bootstrap441.min.css' %}" type="text/css">-->
-<!--        <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">-->
+<!--        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">-->
+        <link rel="stylesheet" href="{% static 'css/bootstrap441.min.css' %}" type="text/css">
+        <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
 
     </head>
     <body class="bg-secondary">
-        <div class="container">
+        <div class="full-width-container">
             <div class="row">
                 <div class="col-md-12">
                     <nav>
@@ -25,6 +25,7 @@
                 </div>
             </div>
         </div>
+        <div class="clear"></div>
     {% block content %}
     {% endblock %}
     <footer class="col btn btn-dark">
