am adaugat un search bar

--- a/OnlineMarket/templates/app1/item_index.html
+++ b/OnlineMarket/templates/app1/item_index.html
@@ -8,7 +8,7 @@
             <form method="get" action="{% url 'app1:list_items' %}">
                 <div class="form-group">
 
-                    <input class="m-1 form-control text-white bg-dark" name="query" value="{{ query }}"
+                    <input class="m-1 form-control text-white bg-dark" name="search" value="{{ query }}"
                            type="text" placeholder="Find a toy, a video game, etc...">
                     <button class="m-1 btn btn-info">Search</button>
                 </div>
