--- a/OnlineMarket/templates/app1/item_index.html
+++ b/OnlineMarket/templates/app1/item_index.html
@@ -4,7 +4,6 @@
 
 {% block content %}
     <div class="m-1 col-5">
-<!--        <form>-->
             <form method="get" action="{% url 'app1:list_items' %}">
                 <div class="form-group">
 
@@ -15,16 +14,19 @@
                     <form method="get" action="{% url 'app1:list_items' %}">
                         <label for="category">Select a category:</label>
                         <select class="m-2 form-control text-white bg-dark" id="category" name="category">
-                            <option value="">All categories</option>
-                            {% for choice in ITEM_CHOICES %}
-                                <option value="{{ choice.0 }}">{{ choice.1 }}</option>
-                            {% endfor %}
+<!--                            <option value="">All categories</option>-->
+<!--                            {% for choice in ITEM_CHOICES %}-->
+<!--                                <option value="{{ choice.0 }}">{{ choice.1 }}</option>-->
+<!--                            {% endfor %}-->
+                            <option value="">Toate categoriile</option>
+                            <option value="Toys">Toys</option>
+                            <option value="Sport">Sport</option>
+                            <option value="Animals">Animals</option>
                         </select>
                         <button class="m-1 btn btn-info" type="submit">Filter</button>
                     </form>
                 </div>
             </form>
-<!--        </form>-->
     </div>
     <a class="m-1 btn btn-primary" href="{% url 'app1:add_item' %}">Add item</a>
     <table class="table">
