--- a/OnlineMarket/templates/app1/item_index.html
+++ b/OnlineMarket/templates/app1/item_index.html
@@ -9,21 +9,21 @@
 
                     <input class="m-1 form-control text-white bg-dark" name="search" value="{{ query }}"
                            type="text" placeholder="Find a toy, a video game, etc...">
-                    <button class="m-1 btn btn-info">Search</button>
+<!--                    <button class="m-1 btn btn-info">Search</button>-->
 
                     <form method="get" action="{% url 'app1:list_items' %}">
-                        <label for="category">Select a category:</label>
+<!--                        <label for="category">Select a category:</label>-->
                         <select class="m-2 form-control text-white bg-dark" id="category" name="category">
 <!--                            <option value="">All categories</option>-->
 <!--                            {% for choice in ITEM_CHOICES %}-->
 <!--                                <option value="{{ choice.0 }}">{{ choice.1 }}</option>-->
 <!--                            {% endfor %}-->
-                            <option value="">Toate categoriile</option>
+                            <option value="">All categories</option>
                             <option value="Toys">Toys</option>
                             <option value="Sport">Sport</option>
                             <option value="Animals">Animals</option>
                         </select>
-                        <button class="m-1 btn btn-info" type="submit">Filter</button>
+                        <button class="m-1 btn btn-info" type="submit">Search</button>
                     </form>
                 </div>
             </form>
