--- a/OnlineMarket/templates/registration/userprofile_index.html
+++ b/OnlineMarket/templates/registration/userprofile_index.html
@@ -4,6 +4,7 @@
         <thead>
             <tr>
                 <th>Username</th>
+                <th>Email</th>
                 <th>Currency</th>
                 <th>Actions</th>
             </tr>
@@ -11,6 +12,7 @@
         <tbody>
             <tr>
                 <td>{{ request.user.username }}</td>
+                <td>{{ request.user.email }}</td>
                 <td>{{ request.user.customuser.preferred_currency }}</td>
                 <td>
                     <a class="btn btn-info" href="{% url 'userprofile:edit_account' request.user.id %}">Edit</a>
