--- a/OnlineMarket/templates/registration/userprofile_index.html
+++ b/OnlineMarket/templates/registration/userprofile_index.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
+{% block title %}Account{% endblock %}
+
 {% block content %}
+
     <table class="table">
         <thead>
             <tr>
