--- a/OnlineMarket/templates/app1/item_index.html
+++ b/OnlineMarket/templates/app1/item_index.html
@@ -22,24 +22,48 @@
                                 <option value="Toys" selected="selected">Toys</option>
                                 <option value="Sport">Sport</option>
                                 <option value="Animals">Animals</option>
+                                <option value="Auto">Auto</option>
+                                <option value="Clothes">Clothes</option>
 
                             {% elif category == 'Sport' %}
                                 <option value="">All categories</option>
                                 <option value="Toys">Toys</option>
                                 <option value="Sport" selected="selected">Sport</option>
                                 <option value="Animals">Animals</option>
+                                <option value="Auto">Auto</option>
+                                <option value="Clothes">Clothes</option>
 
                             {% elif category == 'Animals' %}
                                 <option value="">All categories</option>
                                 <option value="Toys">Toys</option>
                                 <option value="Sport">Sport</option>
                                 <option value="Animals" selected="selected">Animals</option>
+                                <option value="Auto">Auto</option>
+                                <option value="Clothes">Clothes</option>
+
+                            {% elif category == 'Auto' %}
+                                <option value="">All categories</option>
+                                <option value="Toys">Toys</option>
+                                <option value="Sport">Sport</option>
+                                <option value="Animals">Animals</option>
+                                <option value="Auto" selected="selected">Auto</option>
+                                <option value="Clothes">Clothes</option>
+
+                            {% elif category == 'Clothes' %}
+                                <option value="">All categories</option>
+                                <option value="Toys">Toys</option>
+                                <option value="Sport">Sport</option>
+                                <option value="Animals">Animals</option>
+                                <option value="Auto">Auto</option>
+                                <option value="Clothes" selected="selected">Clothes</option>
 
                             {% else %}
                                 <option value="">All categories</option>
                                 <option value="Toys">Toys</option>
                                 <option value="Sport">Sport</option>
                                 <option value="Animals">Animals</option>
+                                <option value="Auto">Auto</option>
+                                <option value="Clothes">Clothes</option>
                             {% endif %}
 
                         </select>
