--- a/OnlineMarket/templates/base.html
+++ b/OnlineMarket/templates/base.html
@@ -13,8 +13,9 @@
                 <div class="col-md-12">
                     <nav>
                         <a class="btn" href="/admin/">Admin</a>
-                        <a class="btn" href="{% url 'app1:list_items' %} ">Items</a>
+                        <a class="btn" href="{% url 'app1:list_items' %}">Items</a>
                         {% if request.user.is_authenticated %}
+                            <a class="btn btn-info" href="{% url 'message:inbox' %}">Inbox</a>
                             <a class="btn btn-danger" href="{% url 'logout' %}">Logout</a>
                             <a class="btn btn-primary" href="{% url 'userprofile:user_account' %}">Account</a>
                         {% else %}
@@ -29,7 +30,7 @@
     {% block content %}
     {% endblock %}
     <footer class="col btn btn-dark">
-
+        <p>This website is designed for anyone looking to buy or sell various products.</p>
     </footer>
     </body>
 </html>
